# dunetrigger

./: CMakeLists.txt  create_cmakelists.sh
docs/: README.md
dunetrigger/TriggerAna/: CMakeLists.txt  FieldNames.hh  FieldNames.hpp  MiniBackTracker.hh  ScalarBuffer.hh  ScalarBuffer.hpp  ScalarFieldsBuffer.hh  SoABuffer.hh  SoABuffer.hpp  TPGAna_module.cc  TriggerActivityTxtDump_module.cc  TriggerAnaTree.fcl  TriggerAnaTreeV4_module.cc  TriggerAnaTreeV5_module.cc  TriggerAnaTree_module.cc  TriggerAnaTree_module.hh  TriggerTPCInfoComparator_module.cc  TriggerTPCInfoDisplay_module.cc  VectorFieldsBuffer.hh  compare_files.py  compare_trees.py
dunetrigger/TriggerAna/exe/: CMakeLists.txt  soa_demo.cxx  test_tuple_writing.cxx
dunetrigger/TriggerAna/fcl/: CMakeLists.txt  README.md  run_triggerTPCInfoDisplay.fcl  ta_dump_dune10kt_1x2x6.fcl  triggerana_tpc_infocomparator.fcl  triggerana_tpc_infocomparator_protodunehd.fcl  triggerana_tpc_infocomparator_protodunehd_simpleThr_simpleWin_simpleWin.fcl  triggerana_tpc_infodisplay.fcl  triggerana_tpc_infodisplay_protodunehd.fcl  triggerana_tpc_infodisplay_protodunehd_simpleThr_simpleWin_simpleWin.fcl  triggerana_tree.fcl  triggerana_tree_1x2x2.fcl  triggerana_tree_1x2x2_charge_density.fcl  triggerana_tree_1x2x2_simpleThr_simpleWin_simpleWin.fcl  triggerana_tree_1x2x6.fcl  triggerana_tree_1x2x6_simpleThr_simpleWin_simpleWin.fcl  triggerana_tree_protodunehd.fcl  triggerana_tree_protodunehd_simpleThr_simpleWin_simpleWin.fcl
dunetrigger/TriggerAna/fcl/fdvd/: triggerana_vd_1x8x14_simpleThr.fcl  triggerana_vd_1x8x6_simpleThr.fcl
dunetrigger/TriggerAna/fcl/pds/: tpg_dunefdvd_1x8x6_pds.fcl  triggersim_triggerana_dunefd_1x2x6_pds.fcl  triggersim_triggerana_dunefdvd_1x8x14_pds.fcl  triggersim_triggerana_dunefdvd_1x8x6_pds.fcl
dunetrigger/TriggerAna/fcl/production/: tpg_dune10kt_1x2x2.fcl  tpg_dune10kt_1x2x6.fcl  triggerana_dune10kt_1x2x2.fcl  triggerana_dune10kt_1x2x6.fcl  triggerana_tree_1x2x2_tpg_absrc_st.fcl  triggerana_tree_1x2x2_tpg_absrs_st.fcl  triggerana_tree_1x2x6_tpg_absrc_st.fcl  triggerana_tree_1x2x6_tpg_absrs_st.fcl  triggersim_triggerana_dune10kt_1x2x2.fcl  triggersim_triggerana_dune10kt_1x2x6.fcl
dunetrigger/TriggerSim/: CMakeLists.txt  TriggerActivityMakerOnlineTPC_module.cc  TriggerActivityMakerTPC_module.cc  TriggerActivityMakerV4_module.cc  TriggerActivityMakerV5_module.cc  TriggerCandidateMakerOnlineTPC_module.cc  TriggerCandidateMakerTPC_module.cc  TriggerCandidateMakerV4_module.cc  TriggerCandidateMakerV5_module.cc  TriggerPrimitiveMakerPDS_module.cc  TriggerPrimitiveMakerTPC_module.cc  TriggerTPCInfoDisplay_module.cc  Verbosity.hh
dunetrigger/TriggerSim/TAAlgTools/: CMakeLists.txt  TAAlgTPCADCSimpleWindow.hh  TAAlgTPCExample.hh  TPWindow.hh
dunetrigger/TriggerSim/TCAlgTools/: CMakeLists.txt  TCAlgTPCExample.hh
dunetrigger/TriggerSim/TPAlgTools/: CMakeLists.txt  TPAlgPDSLessSimpleThreshold.hh  TPAlgPDSLessSimpleThreshold_tool.cc  TPAlgPDSMatchedFilter.hh  TPAlgPDSMatchedFilter_tool.cc  TPAlgPDSSimpleThreshold.hh  TPAlgPDSSimpleThreshold_tool.cc  TPAlgTPCAbsRunningSum.hh  TPAlgTPCAbsRunningSum_tool.cc  TPAlgTPCExample.hh  TPAlgTPCExample_tool.cc  TPAlgTPCRunningSum.hh  TPAlgTPCRunningSum_tool.cc  TPAlgTPCSimpleThreshold.hh  TPAlgTPCSimpleThreshold_tool.cc  TPAlgTPCTool.hh  TPAlgTool.hh
dunetrigger/TriggerSim/fcl/: README.md  TriggerAnaTree.fcl  swift_tamaker_dune10kt_1x2x6.fcl  trigger_makers.fcl  triggersim.fcl  triggersim_1x2x2_simpleThr_simpleWin_example.fcl  triggersim_1x2x2_simpleThr_simpleWin_simpleWin.fcl  triggersim_1x2x6_simpleThr_simpleWin_example.fcl  triggersim_1x2x6_simpleThr_simpleWin_simpleWin.fcl  triggersim_dune10kt_1x2x6.fcl  triggersim_makers.fcl  triggersim_modules.fcl  triggersim_protodunehd.fcl  triggersim_protodunehd_simpleThr_aeWin_aeWin.fcl  triggersim_protodunehd_simpleThr_simpleWin_example.fcl  triggersim_protodunehd_simpleThr_simpleWin_simpleWin.fcl
dunetrigger/TriggerSim/fcl/fdvd/: prodmarley_nue_cc_flat_vd_1x8x6.fcl  triggersim_makers_vd.fcl  triggersim_tpg_vd_1x8x14.fcl  triggersim_tpg_vd_1x8x6.fcl
dunetrigger/TriggerSim/triggeralgs/: CMakeLists.txt
dunetrigger/TriggerSim/triggeralgs/v4/: CMakeLists.txt
dunetrigger/TriggerSim/triggeralgs/v4/src/: TAWindow.cpp  TPWindow.cpp  TriggerActivityMakerADCSimpleWindow.cpp  TriggerActivityMakerBundleN.cpp  TriggerActivityMakerChannelAdjacency.cpp  TriggerActivityMakerChannelDistance.cpp  TriggerActivityMakerDBSCAN.cpp  TriggerActivityMakerHorizontalMuon.cpp  TriggerActivityMakerMichelElectron.cpp  TriggerActivityMakerPlaneCoincidence.cpp  TriggerActivityMakerPrescale.cpp  TriggerActivityMakerSupernova.cpp  TriggerCandidateMakerADCSimpleWindow.cpp  TriggerCandidateMakerBundleN.cpp  TriggerCandidateMakerChannelAdjacency.cpp  TriggerCandidateMakerChannelDistance.cpp  TriggerCandidateMakerDBSCAN.cpp  TriggerCandidateMakerHorizontalMuon.cpp  TriggerCandidateMakerMichelElectron.cpp  TriggerCandidateMakerPlaneCoincidence.cpp  (+3 more)
dunetrigger/TriggerSim/triggeralgs/v5/: CMakeLists.txt  README.md
dunetrigger/TriggerTools/: CMakeLists.txt  GetManyByRegexTag.hh  HydraFilter_module.cc  RawDigitAna_module.cc  RawDigitsCleaner_module.cc  RawDigitsReadTest_module.cc
dunetrigger/TriggerTools/fcl/: hydra_filter.fcl  rawdigifinder.fcl  rawdigits_cleaner.fcl  save_vd_1x8x14_3view_30deg_rawdigi_hists.fcl  save_vd_1x8x14_3view_30deg_rawdigi_waveforms.fcl  save_vd_1x8x6_3view_30deg_rawdigi_hists.fcl
(+200 files in other folders)
